package keijumt.design_pattern.pattern.factoryMethod

class ConcreteProduct : Product {
    override fun method() {

    }
}