package keijumt.design_pattern.pattern.factoryMethod

interface Product {
    fun method()
}